<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".controller.activity.OnBoardScreen">

    <TextView
        android:id="@+id/reliable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:fontFamily="@font/cairo_bold"
        android:layout_marginTop="100dp"
        android:text="@string/reliable"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/reliable_descr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/reliable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:padding="20dp"
        android:textColor="@color/white"
        android:fontFamily="@font/cairo_light"
        android:text="@string/we_have_tai"
        android:gravity="center"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/image_Reliable"
        app:layout_constraintTop_toBottomOf="@id/reliable_descr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_group_reliable"
        />
    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_Reliable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:textSize="20sp"
        android:padding="20dp"
        android:textColor="@color/white"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/skip"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_Reliable"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/move_next"
        android:textSize="20sp"
        android:padding="20dp"
        android:textColor="@color/white"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/next"
        android:gravity="center"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/move_next"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_Reliable"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_move_next"
        android:layout_marginEnd="10dp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>