<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".controller.activity.Registration">

    <ScrollView
        android:id="@+id/scrollViewR"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/register_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/lets_start"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/cairo_bold"
                android:textSize="30sp"
                android:textColor="@color/semi_black"
                android:id="@+id/get_start"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/get_start"
                android:text="@string/signup_social"
                android:id="@+id/sign_up_tag"
                android:paddingTop="8dp"
                android:textColor="@color/color_unselect"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up_tag"
                android:drawableStart="@drawable/ic_user"
                android:hint="@string/name"
                android:textAlignment="viewStart"
                android:singleLine="true"
                android:paddingBottom="20dp"
                android:drawablePadding="24dp"

                android:fontFamily="@font/cairo_regular"
                android:layout_marginTop="50dp"
                android:id="@+id/user_name"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_name"
                android:drawableStart="@drawable/ic_mail"
                android:hint="@string/email"
                android:singleLine="true"
                android:paddingBottom="20dp"
                android:drawablePadding="24dp"
                android:textAlignment="viewStart"

                android:fontFamily="@font/cairo_regular"
                android:layout_marginTop="10dp"
                android:id="@+id/user_email"/>

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_textSize="16sp"
                app:ccp_clickable="true"
                android:fontFamily="@font/cairo_regular"
                app:ccp_autoFormatNumber="true"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_email" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:textSize="16sp"
                android:fontFamily="@font/cairo_regular"
                android:paddingBottom="15dp"
                android:inputType="phone"
                app:layout_constraintBottom_toBottomOf="@id/ccp2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ccp2"
                app:layout_constraintTop_toBottomOf="@id/user_email" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phone_number"
                    android:drawableStart="@drawable/ic_mail"
                    android:hint="@string/language"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:paddingBottom="20dp"
                    android:drawablePadding="24dp"
                    android:textColorHint="@color/color_unselect"
                    android:fontFamily="@font/cairo_regular"
                    android:layout_marginTop="10dp"
                    android:id="@+id/language"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/language"
                app:layout_constraintStart_toStartOf="parent"
                android:drawableStart="@drawable/ic_uncheck"
                android:layout_marginTop="40dp"
                android:textColor="@color/color_unselect"
                android:text="@string/terms"
                android:drawablePadding="20dp"
                android:id="@+id/terms"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.skydoves.elasticviews.ElasticButton
        android:id="@+id/register_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/register"
        app:button_cornerRadius="50dp"
        android:gravity="center"
        app:button_duration="250"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@color/green"
        app:button_scale="0.87"
        android:textColor="@color/white"
        android:fontFamily="@font/cairo_bold"
        android:textSize="16sp"/>




</androidx.constraintlayout.widget.ConstraintLayout>