<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".controller.fragment.planSlectionScreen.Plan_selection">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        >
        <com.skydoves.elasticviews.ElasticImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:imageView_scale="0.7"
            app:imageView_duration="300"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/circular_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selected_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/back"
            app:layout_constraintBottom_toBottomOf="@+id/back"
            android:text="@string/cleaning_services"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/cairo_bold"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/invoice_bg"
            app:layout_constraintTop_toBottomOf="@id/back"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selected_cleaning"
                android:textSize="25sp"
                android:fontFamily="@font/cairo_bold"
                android:textColor="@color/black"
                android:padding="15dp"
                android:id="@+id/selected_service_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/selected_service_name"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:id="@+id/planlist_rv"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selected_frequency"
                android:textSize="20sp"
                android:fontFamily="@font/cairo_bold"
                android:textColor="@color/black"
                android:padding="15dp"
                android:id="@+id/selected_service_frequency"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/planlist_rv"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/frequencylayout"
                android:weightSum="3"
                app:layout_constraintTop_toBottomOf="@id/selected_service_frequency"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:id="@+id/weekly"
                    android:layout_margin="10dp"
                    android:text="@string/weekly"
                    android:textColor="@color/color_unselect"
                    android:background="@drawable/frequency_unselect_bg"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:id="@+id/bi_weekly"
                    android:padding="10dp"
                    android:text="@string/bi_weekly"
                    android:textColor="@color/color_unselect"
                    android:background="@drawable/frequency_unselect_bg"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:id="@+id/monthly"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/monthly"
                    android:textColor="@color/white"
                    android:background="@drawable/frequency_select_bg"
                    android:gravity="center"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selected_extra"
                android:textSize="20sp"
                android:fontFamily="@font/cairo_bold"
                android:textColor="@color/black"
                android:padding="15dp"
                android:id="@+id/selected_extras"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/frequencylayout"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/extrasplanlist_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:layout_constraintBottom_toTopOf="@id/update_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/selected_extras"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:id="@+id/update_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/transparent"
                android:orientation="horizontal"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
                <com.skydoves.elasticviews.ElasticButton
                    android:id="@+id/confirmbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmfor"
                    app:button_cornerRadius="8dp"
                    android:gravity="center"
                    app:button_duration="250"
                    android:background="@color/green"
                    app:button_scale="0.87"
                    android:textColor="@color/white"
                    android:fontFamily="@font/cairo_regular"
                    android:textSize="16sp"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


</FrameLayout>