<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent"
    tools:context=".controller.activity.Verification">
    <ScrollView
        android:id="@+id/scrollViewV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/update_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/mobile_login"
        android:layout_marginTop="20dp"
        android:id="@+id/verify_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/verify_icon"
                android:text="@string/verify_phone"
                android:fontFamily="@font/cairo_regular"
                android:textColor="@color/semi_black"
                android:layout_marginTop="12dp"
                android:padding="10dp"
                android:textStyle="bold"
                android:id="@+id/verifytag"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/verifytag"
                android:text="@string/enter_your_mobile"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:fontFamily="@font/cairo_regular"
                android:layout_marginTop="8dp"
                android:padding="10dp"
                android:id="@+id/enterTag"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/enterTag"
                android:gravity="center"
                android:fontFamily="@font/cairo_regular"
                android:text="@string/_454441234633"
                android:textColor="@color/blue"
                android:padding="10dp"
                android:id="@+id/number"/>

            <com.chaos.view.PinView
                android:id="@+id/firstPinView"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:cursorVisible="true"
                android:layout_marginTop="10dp"
                android:inputType="number"
                android:itemBackground="@drawable/circle"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cursorColor="@color/transparent"
                app:cursorWidth="2dp"
                app:hideLineWhenFilled="false"
                app:itemCount="4"
                app:itemHeight="48dp"
                app:itemRadius="10dp"
                app:itemSpacing="15dp"
                app:itemWidth="48dp"
                app:lineColor="@color/white"
                app:lineWidth="0dp"
                app:viewType="rectangle"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/update_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/transparent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    <com.skydoves.elasticviews.ElasticButton
        android:id="@+id/confirmbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:button_cornerRadius="8dp"
        android:gravity="center"
        app:button_duration="250"
        android:background="@color/green"
        app:button_scale="0.87"
        android:textColor="@color/white"
        android:fontFamily="@font/cairo_regular"
        android:textSize="16sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>